--- a/project3/index.html
+++ b/project3/index.html
@@ -134,7 +134,7 @@
                 <img src="./ICONS/icons8-javascript.svg" alt="JavaScriptICON" />
                 <img src="./ICONS/Java Icons.gif" alt="JavaGIF" />
                 <img src="./ICONS/C++ Icon.svg" alt="C++ICON" />
-                <img src="./ICONS/C# Icons.svg" alt="C#ICON" />
+                <img src="./ICONS/icons8-c-sharp-logo.svg" alt="C#ICON" />
               </td>
             </tr>
           </table>
