--- a/project3/lifeplan.html
+++ b/project3/lifeplan.html
@@ -53,7 +53,7 @@
           <div class="motivation">
             <h1>個人簡介和申請動機</h1>
           </div>
-          <h2 style="text-align: left; font-size: 1.2rem">
+          <h2>
             我是今年一月畢業的大學生，三月當兵，在七月當完兵後在台北從事一些舉辦活動方的兼職工作人員，
             在我大學時，就有看點澎澎老師的教學影片，如HTML CSS等，
             最近在YT上看到參與WeHelp課程學員的分享影片，
@@ -160,131 +160,149 @@
         </div>
       </section>
 
-      <section class="decideChooseReturn">
-        <h1 style>軟體技術日新月異，如何確定選擇投入的領域是正確有回報的？</h1>
-        <h2 style>
-          有在yt上觀看一些軟體工程師的經驗分享(如矽谷工程師
-          <a
-            style="text-decoration: none"
-            href="https://www.youtube.com/@hackbearterry/videos"
-            ><i class="fa-brands fa-youtube" style="color: #f50000"></i>Terry</a
-          >)，一路走來職涯心得分享，
-          以及如何保持競爭力，我認為常常保持競爭力非常重要，
-          未來任職其中，同時閒暇時會找時間去面試其他間公司，暸解自己的市場定位，也是尋求看看有沒有更好的發展機會．
-          104很多公司都有寫在招募的人才專業技能需求（技能樹），時不時上去看看，也可以知道市場當下發生了什麼變化，
-          比如對哪個領域的需求有增加，不局限於某種特定領域，先從前後端入職，隨著經驗及視野的提升，拓展自己工作的領域。
-        </h2>
-      </section>
-      <section class="dealWithEmotions">
-        <h1>請描述一件產生明顯負面情緒的經歷，如何處理該情緒？</h1>
-        <h2>
-          在大學資訊中心工作階段，在和同事(也是輔大的學生)一起工作時，有時工作上會有摩擦，
-          工作方式上作法不同，出現有些爭吵的情況，這情況在出社會工作後也有遇到，自己本身有冥想的習慣，
-          我覺得也很適合套用在面對負面情感的時候，首先是察覺到自己的情緒，接受並旁觀它，有時候情緒放置個半小時、半天、
-          一天後來觀看它，會有不同的看法，之前曾在書中看過，延後看待情緒，比如很生氣、挫折的事，事後看來很可能只是一件小事，
-          只是當下的自己放大檢視、抓著不放而已，試著想是什麼原因造成的，原來這種情況下自己會是這樣的感受，過程自己是否能處理得更好，
-          在畢業專題製作開發遊戲時，我也常面對焦慮的情緒，自己的過程是放下<i
-            class="fa-solid fa-arrow-right-long fa-lg"
-            style="color: #eecd87"
-          ></i>
-          接受<i
-            class="fa-solid fa-arrow-right-long fa-lg"
-            style="color: #eecd87"
-          ></i
-          >思考<i
-            class="fa-solid fa-arrow-right-long fa-lg"
-            style="color: #eecd87"
-          ></i
-          >行動，先把情緒放下，接受現況，
-          思考可能的解決方法後，行動是最重要的執行力，第一個和同事或是人之間相處的摩擦，如果當下溝通無果時，隔一段時間再來溝通，通常雙方情緒都
-          降下來時，可能比較有結果，第二個開發遊戲時遇到的挫折和焦慮時，我會和朋友、老師談談，暸解問題大概的方向和遊玩體驗，根據其來調整，
-          以及去找相關的資源來做修正，
-          想釋放情緒時和朋友談談或是做自己喜歡的事，我的是聽歌、慢跑、彈吉他，
-          很多時候這些做一做後，心就會回歸平靜，自己也常保持冥想的習慣，我覺得面對壓力等負面情緒是把雙面刃，壓力也可以敦促人成長，一體兩面，
-          所以我認為擁抱負面情緒，用樂觀的心態看待，在越過這些時，自己也在逐漸成長！
-        </h2>
+      <section class="outRange">
+        <section class="decideChooseReturn">
+          <div class="software">
+            <h1>軟體技術日新月異，如何確定選擇投入的領域是正確有回報的？</h1>
+          </div>
+
+          <h2>
+            有在yt上觀看一些軟體工程師的經驗分享（如矽谷工程師
+            <a
+              style="text-decoration: none; margin-right: 10px"
+              target="_blank"
+              href="https://www.youtube.com/@hackbearterry/videos"
+              ><i class="fa-brands fa-youtube" style="color: #f50000"></i
+              >Terry</a
+            >），一路走來職涯心得分享，
+            以及如何保持競爭力，我認為常常保持競爭力非常重要，
+            未來任職其中，同時閒暇時會找時間去面試其他間公司，暸解自己的市場定位，也是尋求看看有沒有更好的發展機會．
+            104很多公司都有寫在招募的人才專業技能需求（技能樹），時不時上去看看，也可以知道市場當下發生了什麼變化，
+            比如對哪個領域的需求有增加，不局限於某種特定領域，先從前後端入職，隨著經驗及視野的提升，拓展自己工作的領域。
+          </h2>
+        </section>
       </section>
 
-      <section
-        style="background-color: rgb(244, 202, 138)"
-        class="technologyNote"
-      >
-        <h1 style="font-size: 1.5rem">開發這網頁時的技術心得</h1>
-        <h2 style="font-size: 1.2rem">
-          在開發此網頁時，第一個遇到的就是要如何排版
-          第二個是符合RWD網頁式設計，讓網頁在不同裝置上
-          都有良好的觀看體驗，display:flex
-          相關的使用方法，所以有格外去研究@media screen and (max-width:
-          ?px)，相關語法， 比如低於500px時最上方的nav
-          bar會由上到下呈欄位排列，並且移動時調整position:sticky， 讓nav
-          bar黏在上方，不隨版面移動，增加閱讀者可閱空間，其餘的有bubbles動畫背景，
-          研究網路上的bubbles寫法進行修改，比如圖形外部內部陰影顏色，透明度，以及animationYaxies下到上的路徑，
-          暸解timing-function選出整體運行感覺不錯的，可以調整transition裡面的秒數
-          funciton讓每個泡泡上升有不同的速率，
-          animationXaxies左右搖晃alternate，每個泡泡的位置不同，參數也不太一樣，讓頁面背景呈現豐富的趣味
-          box-shadow則是讓nav-bar看起來更細緻些，小小的陰影提示所處位置網頁網頁是否有滾輪向下滑動視窗移動(網頁上下方)，
-          確保使用者有看到完整的使用頁面，還有因為我首頁底下藍色線條寬度比較寬因為會造成X軸scrollbar出現，所以我把overflow-x:hidden，讓網頁不會出現X軸滾輪，
-          使用上就不會出現上方畫面移動X軸scroll-bar時結果右方是空白的情況發生，首頁的table技術則善用&:hover
-          ，滑鼠在視窗上時會有背景顏色變化。 功能增添趣味性，還有link引進cdn將<a
-            style="text-decoration: none"
-            href="https://cdnjs.com/libraries/bootstrap"
-            >bootstrap</a
-          >、<a
-            style="text-decoration: none"
-            href="https://cdnjs.com/libraries/font-awesome/6.7.1"
-            >font-awesome</a
-          >的css檔案引入，讓icon和css樣式可以使用
-        </h2>
+      <section class="dealWithEmotions">
+        <div class="emoProgress">
+          <h1>請描述一件產生明顯負面情緒的經歷，如何處理該情緒？</h1>
+        </div>
+        <div class="emodetail">
+          <h2>
+            在大學資訊中心工作階段，在和同事(也是輔大的學生)一起工作時，有時工作上會有摩擦，
+            工作方式上作法不同，出現有些爭吵的情況，這情況在出社會工作後也有遇到，自己本身有冥想的習慣，
+            我覺得也很適合套用在面對負面情感的時候，首先是察覺到自己的情緒，接受並旁觀它，有時候情緒放置個半小時、半天、
+            一天後來觀看它，會有不同的看法，之前曾在書中看過，延後看待情緒，比如很生氣、挫折的事，事後看來很可能只是一件小事，
+            只是當下的自己放大檢視、抓著不放而已，試著想是什麼原因造成的，原來這種情況下自己會是這樣的感受，過程自己是否能處理得更好，
+            在畢業專題製作開發遊戲時，我也常面對焦慮的情緒，自己的過程是放下<i
+              class="fa-solid fa-arrow-right-long fa-lg"
+              style="color: #eecd87"
+            ></i>
+            接受<i
+              class="fa-solid fa-arrow-right-long fa-lg"
+              style="color: #eecd87"
+            ></i
+            >思考<i
+              class="fa-solid fa-arrow-right-long fa-lg"
+              style="color: #eecd87"
+            ></i
+            >行動，先把情緒放下，接受現況，
+            思考可能的解決方法後，行動是最重要的執行力，第一個和同事或是人之間相處的摩擦，如果當下溝通無果時，隔一段時間再來溝通，通常雙方情緒都
+            降下來時，可能比較有結果，第二個開發遊戲時遇到的挫折和焦慮時，我會和朋友、老師談談，暸解問題大概的方向和遊玩體驗，根據其來調整，
+            以及去找相關的資源來做修正，
+            想釋放情緒時和朋友談談或是做自己喜歡的事，我的是聽歌、慢跑、彈吉他，
+            很多時候這些做一做後，心就會回歸平靜，自己也常保持冥想的習慣，我覺得面對壓力等負面情緒是把雙面刃，壓力也可以敦促人成長，一體兩面，
+            所以我認為擁抱負面情緒，用樂觀的心態看待，在越過這些時，自己也在逐漸成長！
+          </h2>
+        </div>
+      </section>
+
+      <section class="technologyNote">
+        <div class="noteHeader">
+          <h1>開發這網頁時的技術心得</h1>
+        </div>
+        <div class="notedetail">
+          <h2>
+            在開發此網頁時，第一個遇到的就是要如何排版
+            第二個是符合RWD網頁式設計，讓網頁在不同裝置上
+            都有良好的觀看體驗，display:flex
+            相關的使用方法，所以有格外去研究@media screen and (max-width:
+            ?px)，相關語法， 比如低於500px時最上方的nav
+            bar會由上到下呈欄位排列，並且移動時調整position:sticky， 讓nav
+            bar黏在上方，不隨版面移動，增加閱讀者可閱空間，其餘的有bubbles動畫背景，
+            研究網路上的bubbles寫法進行修改，比如圖形外部內部陰影顏色，透明度，以及animationYaxies下到上的路徑，
+            暸解timing-function選出整體運行感覺不錯的，可以調整transition裡面的秒數
+            funciton讓每個泡泡上升有不同的速率，
+            animationXaxies左右搖晃alternate，每個泡泡的位置不同，參數也不太一樣，讓頁面背景呈現豐富的趣味
+            box-shadow則是讓nav-bar看起來更細緻些，小小的陰影提示所處位置網頁網頁是否有滾輪向下滑動視窗移動(網頁上下方)，
+            確保使用者有看到完整的使用頁面，還有因為我首頁底下藍色線條寬度比較寬因為會造成X軸scrollbar出現，所以我把overflow-x:hidden，讓網頁不會出現X軸滾輪，
+            使用上就不會出現上方畫面移動X軸scroll-bar時結果右方是空白的情況發生，首頁的table技術則善用&:hover
+            ，滑鼠在視窗上時會有背景顏色變化。
+            功能增添趣味性，還有link引進cdn將<a
+              style="text-decoration: none"
+              href="https://cdnjs.com/libraries/bootstrap"
+              >bootstrap</a
+            >、<a
+              style="text-decoration: none"
+              href="https://cdnjs.com/libraries/font-awesome/6.7.1"
+              >font-awesome</a
+            >的css檔案引入，讓icon和css樣式可以使用
+          </h2>
+        </div>
       </section>
 
       <section class="myjobAndSociety">
-        <h1 style="font-size: 1.5rem">
-          如何看待自身工作和整個社會群體的連結關係？
-        </h1>
-        <h2 style="font-size: 1.2rem">
-          我認為軟體工程師和社會有非常緊密的連結，
-          哪裡有需求哪裡就有我們軟體應用的場景，在網路社會中，手機、電腦普及化，
-          人們會希望自身的需求能夠透過軟體將其簡易化，讓需求更快地被滿足。
-          <ol>
-            <li>
-              我認為軟體工程師的工作第一種是為了對應社會上的需求(既有的)，
-              比如今天有公司希望打造出智慧家電網路，我們的工作就是在軟體上寫出對應的app連結wifi，讓使用者可以透過手機控制家電，
-              又或是大家習慣使用的電商，也是對應需求的產物，讓消費者能輕鬆下單，省去到實體門市的時間成本。
-            </li>
-            <li>
-              <i
-                ><i
-                  class="fa-solid fa-lightbulb"
-                  style="color: #fff15c"
-                ></i> </i
-              >更進一步是發現並創造需求，比如當年的iphone手機，蘋果公司以觸碰螢幕的方式取代了鍵盤，
-              結合拿來看影片聽歌的功能，大幅拓展了手機的應用場景，藉著創新技術和優化使用體驗，蘋果公司通過這些創新創造了新的市場需求。
-              突發奇想或是顧客有查詢特定店家的需求，可以做個app結合雙北的貓咪咖啡店，這樣做是另版Google-app但只專們出現貓咪咖啡廳的店家，
-              並且能夠在地圖上顯示，不過感覺少了點視覺體驗，如果可以讓每個店家在地圖標示不同的圖示，比如開發多個不同的<i
-                >貓咪圖示<i
-                  style="font-size: 18px"
-                  class="fa-solid fa-cat"
-                ></i></i
-              >，顯示這家店
-              五星好評的次數，讓觀看體驗更好，也讓受眾更容易找到對應的店家，也有專門探險的感覺，可以視覺化以自身位置看住家附近的貓咪咖啡廳，
-              看到評價和導航，甚至開發出收集系統，比如到訪每個店家都有不同的收藏圖。
-            </li>
-          </ol>
-        </h2>
+        <div class="attactSociety">
+          <h1>如何看待自身工作和整個社會群體的連結關係？</h1>
+        </div>
+        <div class="attactSocietydetail">
+          <h2>
+            我認為軟體工程師和社會有非常緊密的連結，
+            哪裡有需求哪裡就有我們軟體應用的場景，在網路社會中，手機、電腦普及化，
+            人們會希望自身的需求能夠透過軟體將其簡易化，讓需求更快地被滿足。
+            <ol>
+              <li>
+                我認為軟體工程師的工作第一種是為了對應社會上的需求(既有的)，
+                比如今天有公司希望打造出智慧家電網路，我們的工作就是在軟體上寫出對應的app連結wifi，讓使用者可以透過手機控制家電，
+                又或是大家習慣使用的電商，也是對應需求的產物，讓消費者能輕鬆下單，省去到實體門市的時間成本。
+              </li>
+              <li>
+                <i
+                  ><i
+                    class="fa-solid fa-lightbulb"
+                    style="color: #fff15c"
+                  ></i> </i
+                >更進一步是發現並創造需求，比如當年的iphone手機，蘋果公司以觸碰螢幕的方式取代了鍵盤，
+                結合拿來看影片聽歌的功能，大幅拓展了手機的應用場景，藉著創新技術和優化使用體驗，蘋果公司通過這些創新創造了新的市場需求。
+                突發奇想或是顧客有查詢特定店家的需求，可以做個app結合雙北的貓咪咖啡店，這樣做是另版Google-app但只專們出現貓咪咖啡廳的店家，
+                並且能夠在地圖上顯示，不過感覺少了點視覺體驗，如果可以讓每個店家在地圖標示不同的圖示，比如開發多個不同的<i
+                  >貓咪圖示<i
+                    style="font-size: 18px"
+                    class="fa-solid fa-cat"
+                  ></i></i
+                >，顯示這家店
+                五星好評的次數，讓觀看體驗更好，也讓受眾更容易找到對應的店家，也有專門探險的感覺，可以視覺化以自身位置看住家附近的貓咪咖啡廳，
+                看到評價和導航，甚至開發出收集系統，比如到訪每個店家都有不同的收藏圖。
+              </li>
+            </ol>
+          </h2>
+        </div>
       </section>
 
       <section class="tellSomething">
-        <h1 style="font-size: 1.5rem">
-          其他想要對我們說的事情？
-          <h2 style="font-size: 1.2rem">
-            很想參與此次課程，我看到課程大綱時為這課程的豐富和精密度深受吸引，看到這幾屆學員在
-            專題發表時發揮了各種巧思，前後端技術的掌握，看著大家經歷過半年深度扎實的訓練，最後的成品展示非常用心，
+        <div class="tellToBootcamps">
+          <h1>其他想要對我們說的事情？</h1>
+        </div>
+        <div class="tellContent">
+          <h2>
+            很想參與此次課程，我看到課程大綱時被這課程的豐富和扎實度深受吸引，看到這幾屆學員在
+            專題發表時發揮了各種巧思，前後端技術精熟的掌握，看著大家經歷過半年深度扎實的訓練，最後的成品展示非常用心，
             加上說明會學員的分享，收穫良多，參與者中不乏此前未接觸這領域的同學，以及工作了好幾年大膽走出熟悉的舒適圈，
-            勇於改變的同學， 發現大家都是為改變而來的，我想能在
+            勇於改變的同學， 覺得大家都是為改變而來的，我想能在
             這裡結交許多志同道合的夥伴，讓彼此在未來的軟體工程師道路一起邁步向前，期待能夠參與此次課程！
             <i class="fa-solid fa-star fa-lg" style="color: #ffff00"></i>
           </h2>
-        </h1>
+        </div>
       </section>
     </main>
     <script
