--- a/project3/index.html
+++ b/project3/index.html
@@ -104,11 +104,11 @@
       <section class="resume">
         <section class="table">
           <table>
-            <tr style="border-top: 2px solid rgb(1, 146, 243)">
+            <tr style="border-top: 2px solid rgb(1, 146, 243); height: auto">
               <td style="width: 20%">自我介紹</td>
               <td style="width: 80%">
-                畢業於輔仁大學進修部軟體創意與數位學程，熟悉基礎程式語法如Java、C/C++，畢業專題曾以C#製作遊戲
-                近期從udemy、Yt課程自學前後端技術，朝著軟體工程師的目標邁進
+                畢業於輔仁大學進修部軟體創意與數位學程，熟悉基礎程式語法如Java、C/C++，畢業專題曾以C#搭載Unity遊戲引擎
+                製作遊戲，近期從udemy、Yt課程自學前後端技術，朝著軟體工程師的目標邁進
               </td>
             </tr>
             <tr>
@@ -120,7 +120,7 @@
               <td>
                 <ol>
                   <li>
-                    大一下～大四期間在輔大資訊中心擔任維修人員，協助師生解決電腦硬體設備問題(如主機、網路連線)
+                    大一下～大四期間在輔大資訊中心擔任維修人員，協助師生解決電腦硬體設備問題(如主機故障排除、重灌電腦、印表機、網路連線)
                   </li>
                   <li>畢業後兼職展覽活動，協助進行</li>
                 </ol>
