--- a/project3/lifeplan.html
+++ b/project3/lifeplan.html
@@ -68,9 +68,9 @@
             雖然也可以生活，但是我不喜歡這種沒有方向的感覺，我暸解自己想要的是更能看到前景的未來，軟體工程師職涯發展在薪水和待遇上有穩定且良好的上升預期，
             大學底子不好，沒有去多研究前後端的資料，出了社會後知道要好好面對及努力培養專長才有翻轉的可能，我想要抓住這個改變的機會，
             全力以赴地完成這半年的學習旅程，半年後成功轉職繼續人生下一階段的旅程，
-            在學習程式的過程中，在這幾週平日和假日休息時間去學習網路YT、Udemy的教學資源學習前端的影片，找回寫code的手感，我感受自己在
-            學習過程遇到困難常有些挫折，抓不到解決辦法時甚至會有些焦躁，但是在逐步克服困難，完成功能時的成就感，會令當下的我非常開心，我認為自己喜歡挑戰的個性
-            適合往這方面發展
+            ，在這幾週平日和假日休息時間去學習網路YT、Udemy的教學資源學習前端的影片，找回寫code的手感，我感受自己在
+            學習過程遇到困難常有些挫折，抓不到解決辦法時甚至會有些焦躁，但是在逐步克服困難的過程，完成功能時的成就感，會令當下的我非常開心，我認為自己
+            學習時的好奇心和喜歡挑戰困難的個性 適合往這領域發展
           </h2>
         </section>
       </section>
@@ -85,13 +85,13 @@
             ></i>
           </h1>
           <h2>
-            我在大學畢業製作時，自學開發了一個小遊戲以vscode編寫C#，
-            搭配unity遊戲引擎製作，過程也同樣曲折困難重重，我喜歡完成時的成就感
-            有兩個小遊戲，可以download下載，資料夾裡面有個文件描述玩法及開發過程遇到的挑戰
+            我在大學畢業製作時，自學開發了兩個小遊戲以vscode編寫C#，
+            搭配unity遊戲引擎製作，過程曲折困難重重，我喜歡躍過困難時的成就感，成品
+            有兩個小遊戲，可以download下載，資料夾裡面有文件描述玩法及開發過程的心得
             我在大學時就埋下了好奇心，當時因為半工半讀，課業上沒有花很多心力研究，但是在學習過程中，
-            比如老師教導的mobirise製作網頁，我會自己去研究如何更改網頁的樣式，現在則是從
+            比如學習以mobirise製作網頁，我會自己去研究如何更改網頁的樣式，現在則是從
             vscode搭載html css
-            js等前端技術，會去網路上找相關的解決辦法，最近使用上也搭載了vscode
+            js等前端技術，再從網路上找相關的資源解決問題，最近使用上也搭載了vscode
             掛件copilot這個AI程式碼助手，有助於遇到問題可以詢問並解決問題
           </h2>
         </div>
@@ -131,14 +131,14 @@
           <div class="circle">
             <h2>
               有看過課程進度每週都有對應的學習目標，內容豐富扎實，我會放下目前手邊的工作，
-              我會全身投入學習，一方面也想結交同學一起討論課業上的問題
+              全身投入學習，一方面也想結交同學一起討論課業上的問題
             </h2>
           </div>
           <img src="./ICONS/Arrow Right Icon.svg" alt="arrow" />
           <div class="circle">
             <h2>
               我會以一週每天至少8～10小時的學習時間，持續學習，
-              我會透過DC群討論群或線下讀書會和同學交流加強對技能的理解
+              我會透過DC群討論群或線下讀書會和同學交流，加強對技能的理解
               <br />
               <i class="fa-brands fa-discord" style="color: white"></i>
             </h2>
@@ -153,8 +153,9 @@
           <img src="./ICONS/Arrow Right Icon.svg" alt="arrow" />
           <div class="circle">
             <h2>
-              在完善作業的流程時，有其餘時間也會先預習後面的課程內容，
-              讓自己在學習上有更多的掌握
+              在完善作業之餘，其餘時間也會先預習後面的課程內容，
+              讓自己在學習進度上有更多的掌握，自己有更多準備的時間外，
+              繳交的作業品質也能提升
             </h2>
           </div>
         </div>
@@ -176,8 +177,9 @@
               >Terry</a
             >），一路走來職涯心得分享，
             以及如何保持競爭力，我認為常常保持競爭力非常重要，
-            未來任職其中，同時閒暇時會找時間去面試其他間公司，暸解自己的市場定位，也是尋求看看有沒有更好的發展機會．
-            104很多公司都有寫在招募的人才專業技能需求（技能樹），時不時上去看看，也可以知道市場當下發生了什麼變化，
+            未來任職其中，同時閒暇時會找時間去面試其他間公司，除了暸解自己的市場定位，知道自己目前能力能到達的位置，
+            也是尋求看看有沒有更好的發展機會，
+            104很多公司有寫招募的人才專業技能需求（技能樹），時不時上去看看，也可以知道市場當下發生了什麼變化，
             比如對哪個領域的需求有增加，不局限於某種特定領域，先從前後端入職，隨著經驗及視野的提升，拓展自己工作的領域。
           </h2>
         </section>
@@ -210,8 +212,8 @@
             思考可能的解決方法後，行動是最重要的執行力，第一個和同事或是人之間相處的摩擦，如果當下溝通無果時，隔一段時間再來溝通，通常雙方情緒都
             降下來時，可能比較有結果，第二個開發遊戲時遇到的挫折和焦慮時，我會和朋友、老師談談，暸解問題大概的方向和遊玩體驗，根據其來調整，
             以及去找相關的資源來做修正，
-            想釋放情緒時和朋友談談或是做自己喜歡的事，我的是聽歌、慢跑、彈吉他，
-            很多時候這些做一做後，心就會回歸平靜，自己也常保持冥想的習慣，我覺得面對壓力等負面情緒是把雙面刃，壓力也可以敦促人成長，一體兩面，
+            想釋放情緒時和朋友談談或是做自己喜歡的事，我喜歡慢跑、聽歌、彈吉他，
+            很多時候這些做一做後，心就會回歸平靜，自己也常保持冥想的習慣，我覺得面對壓力等負面情緒是把雙面刃，壓力也可以促使人成長，一體兩面，
             所以我認為擁抱負面情緒，用樂觀的心態看待，在越過這些時，自己也在逐漸成長！
           </h2>
         </div>
@@ -233,9 +235,9 @@
             研究網路上的bubbles寫法進行修改，比如圖形外部內部陰影顏色，透明度，以及animationYaxies下到上的路徑，
             暸解timing-function選出整體運行感覺不錯的，可以調整transition裡面的秒數
             funciton讓每個泡泡上升有不同的速率，
-            animationXaxies左右搖晃alternate，每個泡泡的位置不同，參數也不太一樣，讓頁面背景呈現豐富的趣味
+            animationXaxies左右搖晃alternate，每個泡泡的位置不同，參數也不太一樣，讓頁面背景呈現豐富的趣味，
             box-shadow則是讓nav-bar看起來更細緻些，小小的陰影提示所處位置網頁網頁是否有滾輪向下滑動視窗移動(網頁上下方)，
-            確保使用者有看到完整的使用頁面，還有因為我首頁底下藍色線條寬度比較寬因為會造成X軸scrollbar出現，所以我把overflow-x:hidden，讓網頁不會出現X軸滾輪，
+            提醒使用者有無看完完整的頁面，首頁底下藍色線條寬度比較寬因為會造成X軸scrollbar出現，所以我把overflow-x:hidden，讓網頁不會出現X軸滾輪，
             使用上就不會出現上方畫面移動X軸scroll-bar時結果右方是空白的情況發生，首頁的table技術則善用&:hover
             ，滑鼠在視窗上時會有背景顏色變化。
             功能增添趣味性，還有link引進cdn將<a
@@ -274,15 +276,15 @@
                   ></i> </i
                 >更進一步是發現並創造需求，比如當年的iphone手機，蘋果公司以觸碰螢幕的方式取代了鍵盤，
                 結合拿來看影片聽歌的功能，大幅拓展了手機的應用場景，藉著創新技術和優化使用體驗，蘋果公司通過這些創新創造了新的市場需求。
-                突發奇想或是顧客有查詢特定店家的需求，可以做個app結合雙北的貓咪咖啡店，這樣做是另版Google-app但只專們出現貓咪咖啡廳的店家，
-                並且能夠在地圖上顯示，不過感覺少了點視覺體驗，如果可以讓每個店家在地圖標示不同的圖示，比如開發多個不同的<i
+                發想：顧客有查詢特定店家的需求，可以做個app結合雙北的貓咪咖啡店，這樣做是另版Google-app但只專們出現貓咪咖啡廳的店家，
+                並且能夠在地圖上顯示，雖然Google-map也可以查詢店家，不過感覺少了點視覺體驗，如果可以讓每個店家在地圖標示不同的圖示，比如開發多個不同的<i
                   >貓咪圖示<i
                     style="font-size: 18px"
                     class="fa-solid fa-cat"
                   ></i></i
                 >，顯示這家店
                 五星好評的次數，讓觀看體驗更好，也讓受眾更容易找到對應的店家，也有專門探險的感覺，可以視覺化以自身位置看住家附近的貓咪咖啡廳，
-                看到評價和導航，甚至開發出收集系統，比如到訪每個店家都有不同的收藏圖。
+                看到評價和使用導航，甚至開發出收集系統，比如到訪每個店家都有不同的收藏圖。
               </li>
             </ol>
           </h2>
@@ -297,7 +299,7 @@
           <h2>
             很想參與此次課程，我看到課程大綱時被這課程的豐富和扎實度深受吸引，看到這幾屆學員在
             專題發表時發揮了各種巧思，前後端技術精熟的掌握，看著大家經歷過半年深度扎實的訓練，最後的成品展示非常用心，
-            加上說明會學員的分享，收穫良多，參與者中不乏此前未接觸這領域的同學，以及工作了好幾年大膽走出熟悉的舒適圈，
+            加上說明會學員的分享，收穫良多，參與者中不乏此前未接觸這領域的同學，以及工作了些年大膽走出熟悉的舒適圈，
             勇於改變的同學， 覺得大家都是為改變而來的，我想能在
             這裡結交許多志同道合的夥伴，讓彼此在未來的軟體工程師道路一起邁步向前，期待能夠參與此次課程！
             <i class="fa-solid fa-star fa-lg" style="color: #ffff00"></i>
